<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserLogin">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_login"
            android:textSize="32dp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.13" />

        <TextView
            android:id="@+id/username_description"
            android:layout_width="122dp"
            android:layout_height="36dp"
            android:text="@string/username"
            android:textColor="@color/black"
            android:textSize="19dp"
            app:layout_constraintBottom_toTopOf="@+id/editTextText2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.128"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintVertical_bias="0.876" />

        <Button
            android:id="@+id/submit"
            android:layout_width="148dp"
            android:layout_height="63dp"
            android:text="@string/login"
            style="@style/Button1Style"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.761" />

        <Button
            android:id="@+id/registration_button"
            android:layout_width="159dp"
            android:layout_height="44dp"
            android:text="@string/register"
            style="@style/RegistrationButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.921" />

        <EditText
            android:id="@+id/editTextTextPassword"
            android:layout_width="317dp"
            android:layout_height="64dp"
            android:background="#E82E2E"
            android:backgroundTint="@color/normalLoginColor"
            android:ems="10"

            android:hint="@string/obfuscatedPassword"
            android:inputType="textPassword"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.393"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.613" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="122dp"
            android:layout_height="37dp"
            android:layout_marginBottom="9dp"
            android:text="@string/password_description"
            android:textColor="@color/black"
            android:textSize="19dp"
            app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.128"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextText2"
            app:layout_constraintVertical_bias="0.983" />

        <EditText
            android:id="@+id/editTextText2"
            android:layout_width="317dp"
            android:layout_height="64dp"
            android:background="#E82E2E"
            android:backgroundTint="@color/normalLoginColor"
            android:ems="10"
            android:hint="@string/john345"
            android:inputType="text"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.393"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.358" />

</androidx.constraintlayout.widget.ConstraintLayout>